deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-cluster-app
  namespace: multi-cluster-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi-cluster-app
  template:
    metadata:
      labels:
        app: multi-cluster-app
    spec:
      containers:
      - name: nginx
        image: quay.io/nmasse_itix/multi-cluster-app:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /opt/app-root/src
      volumes:
        - name: config
          configMap:
            name: multi-cluster-config
