deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-cluster-app
  labels:
    app: multi-cluster-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: multi-cluster-app
