deploy/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: multi-cluster-app
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: multi-cluster-app
    weight: 100
  wildcardPolicy: None
